[IMG-1033][IMG-1121] - pom updatings and AbstractCompareTxt creation
Signed-off-by: marifunf <marianne.funfrock@rte-france.com>